--- a/views/login.html
+++ b/views/login.html
@@ -20,7 +20,7 @@
 			<input type="text" name="field1" id="utilisateur" value="">
 			<br>
 			Mot de Passe:<br>
-			<input type="text" name="field2" id="motdepasse" value="">
+			<input type="password" name="field2" id="motdepasse" value="">
 			<br>
 			</form>
 			<br>
